[gd_scene load_steps=3 format=2]

[ext_resource path="res://GraphNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://GraphEdit.gd" type="Script" id=2]

[node name="GraphEdit" type="GraphEdit"]
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GraphNode2" parent="." instance=ExtResource( 1 )]
margin_left = 200.0
margin_right = 518.0
rect_scale = Vector2( 1, 1 )
mouse_filter = 1
offset = Vector2( 200, 0 )

[node name="GraphNode3" parent="." instance=ExtResource( 1 )]
margin_top = 300.0
margin_bottom = 512.0
rect_scale = Vector2( 1, 1 )
mouse_filter = 1
offset = Vector2( 0, 300 )
[connection signal="_end_node_move" from="." to="." method="_on_GraphEdit__end_node_move"]
[connection signal="connection_from_empty" from="." to="." method="_on_GraphEdit_connection_from_empty"]
[connection signal="connection_request" from="." to="." method="_on_GraphEdit_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_GraphEdit_connection_to_empty"]
[connection signal="copy_nodes_request" from="." to="." method="_on_GraphEdit_copy_nodes_request"]
[connection signal="delete_nodes_request" from="." to="." method="_on_GraphEdit_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_GraphEdit_duplicate_nodes_request"]
[connection signal="node_selected" from="." to="." method="_on_GraphEdit_node_selected"]
[connection signal="paste_nodes_request" from="." to="." method="_on_GraphEdit_paste_nodes_request"]
